--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Hunger Strikes</title><link rel="stylesheet" href="/HungerStrikes/index.ffc139ae.css"></head><body> <body id="root"> </body> <script type="module" src="/HungerStrikes/index.5b2d95a8.js"></script><script src="/HungerStrikes/index.69414f6a.js" nomodule defer></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hunger Strikes</title>
+    <link rel="stylesheet" href="/HungerStrikes/index.9e4c6fd2.css">
+</head>
+<body>
+    <body id="root">   
+    </body>
+    <script src="/HungerStrikes/index.0641b553.js" defer=""></script>
+</body>
+</html>
